--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/nb-NO/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/nb-NO/Resources.resw
@@ -3617,7 +3617,7 @@ En høy tjenerbelastning kan redusere tilkoblingen.</value>
   <data name="Settings_Protocols_OpenVpnUdp_Title">
     <value>OpenVPN</value>
   </data>
-  <data name="Settings_Protocols_Recommended">
+  <data name="Common_Tags_Recommended">
     <value>Anbefalt</value>
   </data>
   <data name="Settings_Protocols_Smart_Description">
