--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/ca-ES/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/ca-ES/Resources.resw
@@ -3618,7 +3618,7 @@ Una càrrega elevada del servidor pot alentir la vostra connexió.</value>
   <data name="Settings_Protocols_OpenVpnUdp_Title">
     <value>OpenVPN</value>
   </data>
-  <data name="Settings_Protocols_Recommended">
+  <data name="Common_Tags_Recommended">
     <value>Recomanat</value>
   </data>
   <data name="Settings_Protocols_Smart_Description">
