--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/cs-CZ/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/cs-CZ/Resources.resw
@@ -3833,7 +3833,7 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
   <data name="Settings_Protocols_OpenVpnUdp_Title">
     <value>OpenVPN</value>
   </data>
-  <data name="Settings_Protocols_Recommended">
+  <data name="Common_Tags_Recommended">
     <value>Doporučeno</value>
   </data>
   <data name="Settings_Protocols_Smart_Description">
