--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/de-DE/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/de-DE/Resources.resw
@@ -3617,7 +3617,7 @@ Eine hohe Serverauslastung kann deine Verbindung verlangsamen.</value>
   <data name="Settings_Protocols_OpenVpnUdp_Title">
     <value>OpenVPN</value>
   </data>
-  <data name="Settings_Protocols_Recommended">
+  <data name="Common_Tags_Recommended">
     <value>Empfohlen</value>
   </data>
   <data name="Settings_Protocols_Smart_Description">
