--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/fa-IR/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/fa-IR/Resources.resw
@@ -3617,7 +3617,7 @@ Secure Core</value>
   <data name="Settings_Protocols_OpenVpnUdp_Title">
     <value>OpenVPN</value>
   </data>
-  <data name="Settings_Protocols_Recommended">
+  <data name="Common_Tags_Recommended">
     <value>توصیه شده</value>
   </data>
   <data name="Settings_Protocols_Smart_Description">
