--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/fi-FI/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/fi-FI/Resources.resw
@@ -3617,7 +3617,7 @@ Korkea kuormitus voi hidastaa yhteyttäsi.</value>
   <data name="Settings_Protocols_OpenVpnUdp_Title">
     <value>OpenVPN</value>
   </data>
-  <data name="Settings_Protocols_Recommended">
+  <data name="Common_Tags_Recommended">
     <value>Suositus</value>
   </data>
   <data name="Settings_Protocols_Smart_Description">
