--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/fr-FR/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/fr-FR/Resources.resw
@@ -3617,7 +3617,7 @@ Une charge de serveur élevée peut ralentir votre connexion.</value>
   <data name="Settings_Protocols_OpenVpnUdp_Title">
     <value>OpenVPN</value>
   </data>
-  <data name="Settings_Protocols_Recommended">
+  <data name="Common_Tags_Recommended">
     <value>Recommandé</value>
   </data>
   <data name="Settings_Protocols_Smart_Description">
