--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/hu-HU/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/hu-HU/Resources.resw
@@ -3617,7 +3617,7 @@ A nagy szerverterhelés lelassíthatja a kapcsolatot.</value>
   <data name="Settings_Protocols_OpenVpnUdp_Title">
     <value>OpenVPN</value>
   </data>
-  <data name="Settings_Protocols_Recommended">
+  <data name="Common_Tags_Recommended">
     <value>Ajánlott</value>
   </data>
   <data name="Settings_Protocols_Smart_Description">
