--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/id-ID/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/id-ID/Resources.resw
@@ -3509,7 +3509,7 @@ Muatan server yang tinggi dapat memperlambat koneksi Anda.</value>
   <data name="Settings_Protocols_OpenVpnUdp_Title">
     <value>OpenVPN</value>
   </data>
-  <data name="Settings_Protocols_Recommended">
+  <data name="Common_Tags_Recommended">
     <value>Direkomendasikan</value>
   </data>
   <data name="Settings_Protocols_Smart_Description">
