--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pl-PL/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pl-PL/Resources.resw
@@ -3833,7 +3833,7 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
   <data name="Settings_Protocols_OpenVpnUdp_Title">
     <value>OpenVPN</value>
   </data>
-  <data name="Settings_Protocols_Recommended">
+  <data name="Common_Tags_Recommended">
     <value>Zalecany</value>
   </data>
   <data name="Settings_Protocols_Smart_Description">
