--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pt-PT/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pt-PT/Resources.resw
@@ -3617,7 +3617,7 @@ Uma carga elevada do servidor pode diminuir a sua conexão.</value>
   <data name="Settings_Protocols_OpenVpnUdp_Title">
     <value>OpenVPN</value>
   </data>
-  <data name="Settings_Protocols_Recommended">
+  <data name="Common_Tags_Recommended">
     <value>Recomendado</value>
   </data>
   <data name="Settings_Protocols_Smart_Description">
