--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/ru-RU/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/ru-RU/Resources.resw
@@ -3833,7 +3833,7 @@
   <data name="Settings_Protocols_OpenVpnUdp_Title">
     <value>OpenVPN</value>
   </data>
-  <data name="Settings_Protocols_Recommended">
+  <data name="Common_Tags_Recommended">
     <value>Рекомендованный</value>
   </data>
   <data name="Settings_Protocols_Smart_Description">
