--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/sl-SI/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/sl-SI/Resources.resw
@@ -3833,7 +3833,7 @@ Velika obremenitev strežnika lahko upočasni vašo povezavo.</value>
   <data name="Settings_Protocols_OpenVpnUdp_Title">
     <value>OpenVPN</value>
   </data>
-  <data name="Settings_Protocols_Recommended">
+  <data name="Common_Tags_Recommended">
     <value>Priporočeno</value>
   </data>
   <data name="Settings_Protocols_Smart_Description">
