--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/sv-SE/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/sv-SE/Resources.resw
@@ -3617,7 +3617,7 @@ En hög serverbelastning kan sakta ner din anslutning.</value>
   <data name="Settings_Protocols_OpenVpnUdp_Title">
     <value>OpenVPN</value>
   </data>
-  <data name="Settings_Protocols_Recommended">
+  <data name="Common_Tags_Recommended">
     <value>Rekommenderad</value>
   </data>
   <data name="Settings_Protocols_Smart_Description">
