--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/tr-TR/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/tr-TR/Resources.resw
@@ -3617,7 +3617,7 @@ Yükü yüksek olan sunucular bağlantınızı yavaşlatabilir.</value>
   <data name="Settings_Protocols_OpenVpnUdp_Title">
     <value>OpenVPN</value>
   </data>
-  <data name="Settings_Protocols_Recommended">
+  <data name="Common_Tags_Recommended">
     <value>Önerilen</value>
   </data>
   <data name="Settings_Protocols_Smart_Description">
