--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/uk-UA/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/uk-UA/Resources.resw
@@ -3833,7 +3833,7 @@ VPN-з'єднання</value>
   <data name="Settings_Protocols_OpenVpnUdp_Title">
     <value>OpenVPN</value>
   </data>
-  <data name="Settings_Protocols_Recommended">
+  <data name="Common_Tags_Recommended">
     <value>Рекомендовано</value>
   </data>
   <data name="Settings_Protocols_Smart_Description">
