--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/zh-TW/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/zh-TW/Resources.resw
@@ -3510,7 +3510,7 @@ VPN 連線</value>
   <data name="Settings_Protocols_OpenVpnUdp_Title">
     <value>OpenVPN</value>
   </data>
-  <data name="Settings_Protocols_Recommended">
+  <data name="Common_Tags_Recommended">
     <value>推薦</value>
   </data>
   <data name="Settings_Protocols_Smart_Description">
